Fix image margin issues caused by responsive design shifts for smaller screens.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,4 @@
 /* GENERAL STYLES */
-
 body {
   font-size: 1.4em;
   min-width: 550px;
@@ -31,7 +30,6 @@ label {
 }
 
 /* BOOTSTRAP CUSTOMIZATIONS */
-
 .btn {
   background-color: #038b8c;
   color: #fff;
@@ -51,6 +49,10 @@ label {
   border-radius: 5px;
   margin: 10px 0px;
   padding: 25px 10px 20px;
+}
+
+.row {
+  margin: 0 0 20px;
 }
 
 .well {
@@ -85,13 +87,11 @@ label {
 }
 
 /* Survey Section */
-
 div.radio {
   margin: 10px 18px;
 }
 
 /* Result Section*/
-
 .recommend {
   background-color: orange;
   border-radius: 20px;
@@ -105,6 +105,10 @@ div.radio {
 .result {
   background-color: #fff;
   border: 1px solid #3cab9c;
+}
+
+.result h3 {
+  margin: 10px auto 30px;
 }
 
 .result h3 .downsize {
@@ -129,7 +133,7 @@ div.radio {
   margin: 0 auto;
 }
 
-#retake-survey {
+#reset {
   background-color: #fff;
   border: 1px solid #038b8c;
   border-radius: 3px;
